--- a/html/index.html
+++ b/html/index.html
@@ -3,9 +3,9 @@
 <head>
 	<title>Thomas MARINIER-Futur Web Developer</title>
 	<!-- Main CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/> 
-	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	
+	
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	
 </head>
 
