--- a/html/index.html
+++ b/html/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Thomas MARINIER-Futur Web Developer</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<!-- Main CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/> 
+	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	
 </head>
 
@@ -32,7 +34,6 @@
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
 		</section>
 	</div>
 
@@ -67,8 +68,8 @@
 	<div class="footer-content">
 		<div class="container">
 			<ul class="social">
+				<li><a class="icons-sm tw-ic"><i class="fa fa-twitter"></i></a></li>
 
-				<li><a href="#" target="-blank">twitter.</a></li>
 				<li><a href="#" target="-blank">youtube.</a></li>
 				<li><a href="#" target="-blank">facebook.</a></li>
 				<li><a href="#" target="-blank">instagram.</a></li>
