on y est presque

--- a/html/index.html
+++ b/html/index.html
@@ -17,72 +17,145 @@
 </head>
 
 <body>
-	<header> 
-		<div class="intro">
-			<h1>Thomas MARINIER</h1>
-			<h2>Futur Web Developer</h2>
-			<p>25ans #web #geek #otaku #cinema #basket #LaReunion</p>
-			<div class="page-scroll">
-			<a href="#profile" class="btn btn-lg-custom">FAIRE MA CONNAISSANCE </a>				
-			</div>	
-		</div>
-	</header>
+
+    <!-- HERO START -->
+    <header id="home" class="hero parallax-yes">
+        <div id="parallax-1" class="parallax">
+            <div class="bcg skrollable skrollable-between" data-anchor-target="#parallax-1" data-center="background-position: 50% 0px;" data-top-bottom="background-position: 50% -100px;" data-bottom-top="background-position: 50% 100px;">
+                <div class="hero-body">
+                    <div class="hero-text text-center">
+                        <h1>
+                            <span class="blinker">Thomas MARINIER</span>
+                        </h1>
+
+                        <h1 class="small"> Futur Webdeveloper</h1>
+
+                        <p>25ans #web #geek #otaku #cinema #basket #LaReunion</p>
+
+                        <div class="page-scroll">
+                            <a href="#profile" class="btn btn-lg btn-custom">Faire ma connaissance</a>
+                        </div>
+                        <!-- //.page-scroll -->
+                    </div>
+                    <!-- //.hero-text -->
+                </div>
+                <!-- //.hero-body -->
+            </div>
+            <!-- //.bcg -->
+        </div>
+        <!-- //.parallax -->
+    </header>
+    <!-- //HERO END -->
+
+        <!-- PROFILE SECTION START -->
+    <section id="profile" class="section">
+        <div class="container section-wrapper">
+            <div class="section-content">
+                <div class="row">          
+                    <div class="col-md-7 match-height">
+
+                        <!-- PROFILE TEXT START -->
+                        <div class="profile-text padding-right-yes">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <h2 class="section-title">Salut</h2>
+
+                                    <p>
+                                        Petit métissage entre le Sud de la France (Drôme/Vaucluse) et le Sud de La Réunion, j'ai grandi entre la région parisienne, le médoc et l'ile intense...
+                                    </p>
+
+                                    <span class="divider"></span>
+
+                                    <p class="text-grey">
+                                        Je suis actuellement basé à La Réunion où je propose mes services de webdeveloper et webmarketer.
+                                    </p>
+
+                                    <p class="text-grey">
+                                        Pour faire court, mon objectif est de vous permettre de développer votre Chiffre d'Affaires, d'améliorer votre image, de vendre vos produits, etc... via Internet. 
+                                    </p>
+
+                                </div>
+                                <!-- //.col-md-12 -->
+                            </div>
+                            <!-- //.row -->
+                        </div>
+                        <!-- //PROFILE TEXT END -->
 
 
-	<div class="wrapper">
-		<section class="about">
-		<div class="about-content">
-			<h3> je m'appelle Thomas</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		</section>
-	</div>
+ <div class="container">
 
-<h3>my work.</h3>
-<section class="work">
-	<div class="image-area left">
-	
-	</div>
-		<div class="text-box">
-		<div class="text-box-content">
-		<h3>mes Formation que j'ai fais </h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		</div>
-	</div>
-</section>
-</div>
+      <h1 class="my-4 text-center text-lg-left">Mes Projets</h1>
 
-	<section class="contact">
-		<div class="contact-content">
-		<h4>mon email:<a class="email" href="mailto:marinierthomas974@gmail.com">marinierthomas974@gmail.com</a></h4>
-		</div>
-	</section>
-	<div class="image-divider">
-	</div>
+      <div class="row text-center text-lg-left">
 
-<footer>
-	<div class="footer-content">
-		<div class="container">
-			<ul class="social">
-				<li><a class="icons-sm tw-ic"><i class="fa fa-twitter"></i></a></li>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+      </div>
 
-				<li><a href="#" target="-blank">youtube.</a></li>
-				<li><a href="#" target="-blank">facebook.</a></li>
-				<li><a href="#" target="-blank">instagram.</a></li>
-			</ul>
-		</div> 
-	<p class="credit">&copy; Copyright 2017-2017 Thomas Marinier.<br>Designed and Developed by Thomas Marinier.</p>
-	</div>
-</footer> 
+    </div>
+    <!-- /.container -->
+
+
+  
+
 
 
 
