pas totalement fini :/

--- a/html/index.html
+++ b/html/index.html
@@ -58,20 +58,20 @@
                         <div class="profile-text padding-right-yes">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <h2 class="section-title">Salut</h2>
+                                    <h2 class="section-title">Bonjour</h2>
 
                                     <p>
-                                        Petit métissage entre le Sud de la France (Drôme/Vaucluse) et le Sud de La Réunion, j'ai grandi entre la région parisienne, le médoc et l'ile intense...
+                                        Je viens du Nord de la Réunion(Saint-Denis), j’ai grandi dans le quartier du Chaudron
                                     </p>
 
                                     <span class="divider"></span>
 
                                     <p class="text-grey">
-                                        Je suis actuellement basé à La Réunion où je propose mes services de webdeveloper et webmarketer.
+                                       Actuellement je suis en Formation à Simplon Réunion pour devenir  web-developer 
                                     </p>
 
                                     <p class="text-grey">
-                                        Pour faire court, mon objectif est de vous permettre de développer votre Chiffre d'Affaires, d'améliorer votre image, de vendre vos produits, etc... via Internet. 
+                                         
                                     </p>
 
                                 </div>
@@ -152,46 +152,5 @@
 
     </div>
     <!-- /.container -->
-
-
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </body>
 </html>
